# docberry

./: .gitignore  LICENSE  README.md  pyproject.toml
docberry/: __init__.py  _enrichment.py  cli.py  converter.py  segmenter.py
docs/: index.html
